# VSH

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  DEMO_SCRIPT.md  FINAL_DEMO_SUMMARY.md  GEMINI.md  LIMITATIONS.md  QUICKSTART.md  README.md  TROUBLESHOOTING.md  env 파일 예시.txt  pyproject.toml  run_demo.bat  run_vsh.bat  run_vsh.ps1  run_vsh_debug.bat  setup.py  setup_and_run.ps1  start_api.bat  start_watcher.bat
.vsh/: report.json
VSH_Project_MVP/: .env.example  .gitignore  ARCHITECTURE.md  CONVENTIONS.md  GEMINI.md  PRD.md  PROGRESS.md  config.py  demo.py  demo_scan.py  requirements.txt  run_api.py  run_scenario_1.py  test_e2e_detection.py  test_models.py
VSH_Project_MVP/dashboard/: __init__.py  app.py
VSH_Project_MVP/docs/: API_REFERENCE.md  FLOW.md  L1_SEMGREP_ALGORITHM_KR.md  ONBOARDING.md  PROJECT_STRUCTURE.md  VARIABLES.md
VSH_Project_MVP/interfaces/: __init__.py
VSH_Project_MVP/l3/: adapters.py  mock_shared_db.py  normalizer.py  pipeline.py  report_generator.py
VSH_Project_MVP/layer1/: __init__.py
VSH_Project_MVP/layer2/: __init__.py  patch_builder.py
VSH_Project_MVP/mock_db/: kisa_fix.json  knowledge.json  log.json
VSH_Project_MVP/models/: __init__.py  common_schema.py  fix_suggestion.py  (+2 more)
docker/: Dockerfile  docker-compose.yml
docs/: README.md
scripts/: install_semgrep.sh
test/: README.md
vsh/: cli.py
vsh.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
vsh_out/: VSH_REPORT.md
vsh_out_js/: VSH_REPORT.md
vsh_out_req_scan/: VSH_REPORT.md
vsh_out_test_js/: VSH_REPORT.md
vsh_out_test_py/: VSH_REPORT.md
(+226 files in other folders)
